methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:2: error: type mismatch;
 found   : Unit
 required: Boolean
def isFacingTrail():Boolean = {if (estFaceMur()) {return false}; else {avance();if(getCouleurSol()==Color.green) {return true}; else {return false};recule()}
                                                                                                                                                          ^